--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
     body{
     margin: 0;
     padding: 0;
-    background: url(_Spring\ Magnolia\ Flowers\ In\ Nature_\ by\ Stocksy\ Contributor\ _Maryanne\ Gobble_.jpg) no-repeat;
+    background: url(img.jpg) no-repeat;
     background-size: cover;
     }
     .box{
